--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="icon" href="./img/IMG_0767.PNG">
   <!--默认主题CSS-->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-  <!--<link rel="stylesheet" href="./assets/css/vue.css" />-->
+  <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">-->
+  <link rel="stylesheet" href="./assets/css/vue.css" />
   <!--夜间模式CSS-->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css">
   <!--<link rel="stylesheet" href="./assets/css/style.min.css" />-->
