--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       },
       //最好更新时间
       timeUpdater: {
-        text: ">最后更新时间: {docsify-updated}",
+        text: ">最后更新时间: {docsify-updated}新版插件正在开发，文档将重写，如有不懂来群里问",
         formatUpdated: "{YYYY}-{MM}-{DD} {HH}:{mm}",
         whereToPlace: "top",  // "top" or "bottom", default to "bottom"
       }
