--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       },
       HTML_Edit: {
         text: "[📝 在Github编辑此页]({repo})\n",// 文字
-        repo: "https://github.com/engsr6982/engsr6982", //仓库链接
+        repo: "https://github.com/engsr6982/OPTools_Docs", //仓库链接
         Position: "bottom"// 显示位置
       }
     }
